--- a/Lemonaid_1_13_2/src/main/resources/plugin.yml
+++ b/Lemonaid_1_13_2/src/main/resources/plugin.yml
@@ -123,6 +123,10 @@ commands:
       /<command> [target] - Toggle cuff on and off for your target
       /<command> [target] [reason] - Toggle cuff on a player and log a reason
     permission: lemonaid.admin.cuff
+  mastercuff:
+    description: Lock every player without the mastercuff (notify) permission in place and prevent them from using chat.
+    usage: /<command> on|off - Toggle cuff on or off for all online players
+    permission: lemonaid.admin.mastercuff
   mute:
     description: Prevent a player from speaking
     usage: |
@@ -173,6 +177,7 @@ permissions:
       lemonaid.admin.recap: true
       lemonaid.admin.setignore: true
       lemonaid.admin.cuff: true
+      lemonaid.admin.mastercuff: true
       lemonaid.admin.jail: true
       lemonaid.admin.slow: true
       lemonaid.admin.clearchat: true
@@ -187,9 +192,10 @@ permissions:
       lemonaid.admin.notify.mute: true
       lemonaid.admin.notify.ignore: true
       lemonaid.admin.notify.cuff: true
+      lemonaid.admin.notify.mastercuff: true
       lemonaid.admin.notify.jail: true
       lemonaid.admin.slow.exempt: true
-      lemonaid.admin.clearchat.exempt: true
+      lemonaid.admin.notify.clearchat: true # TODO maybe just auto exempt everyone who has the cc perm?
   lemonaid.chat.*:
     description: |
       Permissions for different chats. Toggle if you prefer to
