--- a/Lemonaid_1_13_2/src/main/resources/plugin.yml
+++ b/Lemonaid_1_13_2/src/main/resources/plugin.yml
@@ -140,6 +140,11 @@ commands:
       /<command> [target] [time] [reason] - Mute a player for a specific amount of time and log the reason
       /<command> [target] 0 [reason] - Mute a player indefinitely for a specific reason
     permission: lemonaid.admin.mute
+  globalmute:
+    description: Toggle a non-persistent mute to all online players
+    usage: /<command>
+    aliases: [silence]
+    permission: lemonaid.admin.globalmute
   recap:
     description: Log quick recaps for information hand-off
     usage: |
@@ -176,6 +181,7 @@ permissions:
       lemonaid.admin.reload: true
       lemonaid.admin.notify: true
       lemonaid.admin.mute: true
+      lemonaid.admin.globalmute: true
       lemonaid.admin.recap: true
       lemonaid.admin.setignore: true
       lemonaid.admin.cuff: true
@@ -192,6 +198,7 @@ permissions:
       lemonaid.admin.notify.logout: true
       lemonaid.admin.notify.kick: true
       lemonaid.admin.notify.mute: true
+      lemonaid.admin.notify.globalmute: true
       lemonaid.admin.notify.ignore: true
       lemonaid.admin.notify.cuff: true
       lemonaid.admin.notify.mastercuff: true
